Fixed footer menu spacing

--- a/style.css
+++ b/style.css
@@ -692,7 +692,6 @@ footer h3 {
 
 #footer ul.menu li {
 	display: block;
-	height: 1em;
 }
 
 #footer {
